--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,12 @@
 /.gradle/
 /build
 /.idea
+/.idea/*
 /core/build
 /common/build
 /annotations/build
 /processor/build
 /demo/build
+/build-logic/.gradle
+/build-logic/build
+/build-logic/convention/build
